# nix

./: .gitignore  README.md  flake.nix  justfile  result  sync-dotfiles.sh  zshrc
.dotter/: cache.toml  global.toml
config/: aerospace.toml
config/alacritty/: alacritty.toml
config/alacritty/themes/: tokyo_night_storm.toml
config/casty/: casty.json
config/ghostty/: config.ghostty
config/helix/themes/: catppuccin_macchiato.toml
config/karabiner/: karabiner.json
config/nushell/: env.nu
config/sketchybar/: colors.sh  sketchybarrc
config/sketchybar/focus-helper/: Cargo.toml
config/sketchybar/focus-helper/src/: main.rs
config/sketchybar/plugins/: aerospace.sh  aerospace_focus.sh  aerospace_icons.sh  battery.sh  calendar.sh  cpu.sh  volume.sh
config/yazi/: yazi.toml
config/zed/: settings.json  tasks.json
config/zellij/: config.kdl
config/zellij/layouts/: default.kdl  dev.kdl
darwin/: common.nix
ghostty/: config.ghostty
helix/: config.toml  languages.toml
home/: common.nix  dotfiles.nix  packages.nix  sketchybar.nix  theme.nix
home/hosts/: mbp.nix
kanata/: kanata.kbd
launchd/: com.vb.kanata.plist  org.pqrs.service.daemon.Karabiner-VirtualHIDDevice-Daemon.plist
nushell/: config.nu  env.nu
scripts/: typst_preview.sh
zed/: settings.json  tasks.json
zellij/: config.kdl
